    \\       /
     ))    .'
jgs //    /
         /
         

22 Feb 2019.   'translations are added'

22 Feb 2019.   'Hungarian content problem fixed'
                     there was no output in case of published is less than 1 day.
                     
22 Feb, 2019   'display options experience'
                     - Added the fourth color scheme to toolbar
                     - Change labels for better understanding.
22 Feb, 2019   'translations'
                     - https://translate.wordpress.org/projects/wp-themes/manduca/ : some strings are ignored I had to correct it manually.
                     - more commits fixing translation bugs. 
                     
25 Feb, 2019   'new tooltip and translation corrections'
               - Added new tranlsation to the po file
               - Some translations are corrected (in po file and in Repository)

25 Feb, 2019   'testing in PHP 5.5'
               - more commit 
               - empty function does not work in old PHP. I changed to a more stable function.
               - Change theme description and add PHP 5.5. compatibility 

26 Feb, 2019   'deletions'
               - delete unused files in more commits.
               
28 Feb, 2019   'depreciate smart underline'
                  - browsers now support nice underline. This script is not necessary any longer.
                  
1 Mar, 2019    'delete debug codes'

5 Mar, 2019    'link functions enhancement'
                  - in case of pdf etc file types, external link not indicated. Corrected
                  - Also inlcluded external pdf link in link sample.

6 Mar, 2019    'Add cookie consent to reading option'
                  - Manduca does not use cookies, except when you set non-default reading options.
                  - This fact is written below reading options.
                  - Reading options heading1 also hidden from screen-reader users.
                  - Translations added.

6 Mar, 2019    'Css and translations fixings'
