@@ -78,7 +78,7 @@ $('.toolbar-buttons-open').click(function(){$('.toolbar-buttons').slideToggle(20
 if($(".toolbar-buttons").hasClass("toggled-on")){$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus()}
 else{$(".toolbar-buttons").addClass("toggled-on");$(".toolbar-buttons-open").addClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','true')}});var linkTarget=readCookie("linkTarget");if(linkTarget=='self'){$('#target-selector option[value="self"]').attr('selected','true')}
 if(linkTarget=='blank'){$('#target-selector option[value="blank"]').attr('selected','true')}
-$('#buttons-close').click(function(){$('#toolbar-buttons').slideUp();$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus()});$(document).on('keyup',function(evt){if(evt.key==='Escape'){if($(".toolbar-buttons").hasClass("toggled-on")){$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus();$(".toolbar-buttons").css('display','none')}}});$('.change-font-size').click(function(){var fontSize=$(this).attr('data-zoom');var CookieDate=new Date;$('body').removeClass('font-size-0 font-size-1 font-size-2 font-size-3');$('body').addClass(fontSize);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontSize='+fontSize+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.high-contrast').click(function(){var contrastType=$(this).attr('data-contrast-type');var CookieDate=new Date;$('body').removeClass('high-contrast-1 high-contrast-2 high-contrast-3 high-contrast-0');$('body').addClass(contrastType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='contrastType='+contrastType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.change-font-type').click(function(){var fontType=$(this).attr('data-font-type');var CookieDate=new Date;$('body').removeClass('font-type-1 font-type-2 font-type-0');$('body').addClass(fontType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontType='+fontType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#target-selector').on('change',function(){var selectTarget=this.value;var CookieDate=new Date();CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='linkTarget='+selectTarget+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#skip-to-content').click(function(event){event.preventDefault();var pos=jQuery('#primary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#primary').find('h1').first().focus();return!1});$('#skip-to-sidebar').click(function(event){event.preventDefault();var pos=jQuery('#secondary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#secondary').find('h1').first().focus();return!1});$('#skip-to-footer').click(function(event){event.preventDefault();var pos=jQuery('#footer-wrapper').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#footer-wrapper').find('h1').first().focus();return!1});$('#manduca-back-to-top').click(function(event){event.preventDefault();jQuery('html, body').animate({scrollTop:0},800);jQuery('#skip-to-content').focus();return!1});$(document).on('scroll',function(event){event.preventDefault();if($(window).scrollTop()>100){$('.manduca-back-to-top-div').addClass('show')}else{$('.manduca-back-to-top-div').removeClass('show')}
+$('#buttons-close').click(function(){$('#toolbar-buttons').slideUp();$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus()});$(document).on('keyup',function(evt){if(evt.key==='Escape'){if($(".toolbar-buttons").hasClass("toggled-on")){$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$(".toolbar-buttons").css('display','none');$('#toolbar-buttons-open').focus()}}});$('.change-font-size').click(function(){var fontSize=$(this).attr('data-zoom');$('.change-font-size').removeAttr('aria-selected');$(this).attr('aria-selected','true');var CookieDate=new Date;$('body').removeClass('font-size-0 font-size-1 font-size-2 font-size-3');$('body').addClass(fontSize);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontSize='+fontSize+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.high-contrast').click(function(){var contrastType=$(this).attr('data-contrast-type');$('.high-contrast').removeAttr('aria-selected');$(this).attr('aria-selected','true');var CookieDate=new Date;$('body').removeClass('high-contrast-1 high-contrast-2 high-contrast-3 high-contrast-0');$('body').addClass(contrastType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='contrastType='+contrastType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.change-font-type').click(function(){var fontType=$(this).attr('data-font-type');$('.change-font-type').removeAttr('aria-selected');$(this).attr('aria-selected','true');var CookieDate=new Date;$('body').removeClass('font-type-1 font-type-2 font-type-0');$('body').addClass(fontType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontType='+fontType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#target-selector').on('change',function(){var selectTarget=this.value;var CookieDate=new Date();CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='linkTarget='+selectTarget+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#skip-to-content').click(function(event){event.preventDefault();var pos=jQuery('#primary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#primary').find('h1').first().focus();return!1});$('#skip-to-sidebar').click(function(event){event.preventDefault();var pos=jQuery('#secondary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#secondary').find('h1').first().focus();return!1});$('#skip-to-footer').click(function(event){event.preventDefault();var pos=jQuery('#footer-wrapper').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#footer-wrapper').find('h1').first().focus();return!1});$('#manduca-back-to-top').click(function(event){event.preventDefault();jQuery('html, body').animate({scrollTop:0},800);jQuery('#skip-to-content').focus();return!1});$(document).on('scroll',function(event){event.preventDefault();if($(window).scrollTop()>100){$('.manduca-back-to-top-div').addClass('show')}else{$('.manduca-back-to-top-div').removeClass('show')}
 return!1});$('a.extlink').click(function(){var linkTarget=readCookie("linkTarget");if(linkTarget=='self'){$(this).attr('target','_self')}
 if(linkTarget=='blank'){$(this).attr('target','_blank')}});$('#manduca_archive-month-submit').click(function(){var year=$('#manduca-archive-year-dropdown').val();var month=$('#manduca-archive-month-dropdown').val();var url=window.location.protocol+"//"+window.location.host+"/"+year+"/"+month+"/";document.location.href=url});$('#manduca-archive-year-dropdown').change(function(){var year=$('#manduca-archive-year-dropdown').val();var url=window.location.protocol+"//"+window.location.host+'/?manduca=ajax';jQuery.ajax({url:url,type:'post',data:{action:'archives',year:year,hash:manducaScreenReaderText.hash},success:function(response){$('#manduca-archive-month-dropdown option').remove();$('#manduca-archive-month-dropdown').append(response).focus()}})})})(jQuery);function createCookie(name,value,days){if(days){var date=new Date();date.setTime(date.getTime()+(days*24*60*60*1000));var expires="; expires="+date.toGMTString()}
 else var expires="";document.cookie=name+"="+value+expires+"; path=/"}
